--- a/roles/db_mongodb/tasks/flush_caches.yml
+++ b/roles/db_mongodb/tasks/flush_caches.yml
@@ -13,7 +13,7 @@
   shell: 'kubectl exec {{ item }} -c {{ db_mongodb_container }} -n {{ db_mongodb_namespace }} -- mongo {{ db_storename }} --eval "db.adminCommand( { fsync: 1, lock: false } )"'
   with_items: "{{ podlist.stdout_lines }}"
 
-- name: flush start timestamp
+- name: flush finish timestamp
   shell: 'date >> {{ db_mongodb_dir }}/flush_caches.{{ db_storename }}.finish.txt'
 
 ...
