--- a/roles/bench_fiorand/tasks/cleanup.yml
+++ b/roles/bench_fiorand/tasks/cleanup.yml
@@ -1,9 +1,8 @@
 ---
 
-- name: stop fio pod
-  command: 'kubectl delete -f {{ bench_fiorand_dir }}/fiorun_job.yaml -n {{ bench_fiorand_namespace }}'
-
-- name: delete fio pvc
-  command: 'kubectl delete -f {{ bench_fiorand_dir }}/fiopvc.yaml -n {{ bench_fiorand_namespace }}'
+- include_role:
+    name: server_fio
+  vars:
+    server_mode: stop
 
 ...
