--- a/new_test.yml
+++ b/new_test.yml
@@ -4,11 +4,11 @@
 
 - hosts: localhost
   vars:
-    benchmark_role: bench_distfiorand
+    benchmark_role: bench_fiorand
     run_dir: /tmp/run_ts
     run_namespace: nm-kubuculum
     run_storageclass: ocs-storagecluster-ceph-rbd
-    bench_fiorand_ninstances: 2
+    bench_fiorand_ninstances: 3
 
   tasks:
 
