--- a/roles/bench_fiorand/tasks/gather.yml
+++ b/roles/bench_fiorand/tasks/gather.yml
@@ -1,25 +1,8 @@
 ---
-# tasks file for bench_fiorand gather
 
-- name: get fio pod name
-  command: 'kubectl get pods -l {{ bench_fiorand_podlabel }} --namespace={{ bench_fiorand_namespace }} --no-headers -o custom-columns=":metadata.name"'
-  register: podlist
-
-- name: create directory for storing fio pod output
-  file: 
-    path: '{{ bench_fiorand_dir }}/{{ podlist.stdout }}'
-    state: directory
-
-- name: fetch output from fio pod
-  command: 'kubectl cp {{ bench_fiorand_namespace }}/{{ podlist.stdout }}:{{ bench_fiorand_podoutdir }} {{ bench_fiorand_dir }}/{{ podlist.stdout }}'
-
-- name: fetch df from fio pod
-  shell: 'kubectl exec {{ podlist.stdout }} -c {{ bench_fiorand_container }} -n {{ bench_fiorand_namespace }} -- df -h > {{ bench_fiorand_dir }}/{{ podlist.stdout }}/df_h.txt'
-
-- name: fetch mount from fio pod
-  shell: 'kubectl exec {{ podlist.stdout }} -c {{ bench_fiorand_container }} -n {{ bench_fiorand_namespace }} -- mount > {{ bench_fiorand_dir }}/{{ podlist.stdout }}/mount.txt'
-
-- name: get fio pod location
-  shell: 'kubectl get pods -l {{ bench_fiorand_podlabel }} -n {{ bench_fiorand_namespace }} -o wide >> {{ bench_fiorand_pdir }}/out.{{ role_name }}.txt'
+- include_role:
+    name: server_fio
+  vars:
+    server_mode: gather
 
 ...
