--- a/test_benchmark_role.yml
+++ b/test_benchmark_role.yml
@@ -4,10 +4,11 @@
 
 - hosts: localhost
   vars:
-    benchmark_role: bench_fioforsql
+    benchmark_role: bench_fiorand
     run_dir: /tmp/run_ts
     run_namespace: nm-kubuculum
     run_storageclass: ocs-storagecluster-ceph-rbd
+    bench_fiorand_ninstances: 1
 
   tasks:
 
