--- a/roles/server_fio/tasks/gather.yml
+++ b/roles/server_fio/tasks/gather.yml
@@ -14,6 +14,14 @@
   shell: 'kubectl exec {{ item }} -n {{ server_fio_namespace }} -- ls -l {{ server_fio_datadir }} > {{ server_fio_dir }}/{{ item }}/ls_l.txt'
   with_items: "{{ podlist.stdout_lines }}"
 
+- name: fetch df from pods
+  shell: 'kubectl exec {{ item }} -n {{ server_fio_namespace }} -- df -h > {{ server_fio_dir }}/{{ item }}/df_h.txt'
+  with_items: "{{ podlist.stdout_lines }}"
+
+- name: fetch mount from pods
+  shell: 'kubectl exec {{ item }} -n {{ server_fio_namespace }} -- mount > {{ server_fio_dir }}/{{ item }}/mount.txt'
+  with_items: "{{ podlist.stdout_lines }}"
+
 - name: fetch pod locations
   shell: 'kubectl get pods -l {{ server_fio_podlabel }} -n {{ server_fio_namespace }} -o wide >> {{ server_fio_pdir }}/out.{{ role_name }}.txt'
 
