make distributed fio the default in bench_fiorand

--- a/roles/bench_fiorand/defaults/main.yml
+++ b/roles/bench_fiorand/defaults/main.yml
@@ -45,7 +45,7 @@ bench_fiorand_maxtime_sec: 36000
 #
 
 # mode: is this fio in distributed mode, aka client-server mode
-bench_fiorand_distributed: False
+bench_fiorand_distributed: True
 
 # allow tests to be optional
 bench_fiorand_testread: True
