--- a/roles/bench_fiorand/defaults/main.yml
+++ b/roles/bench_fiorand/defaults/main.yml
@@ -25,14 +25,11 @@ bench_fiorand_podlabel: "type=benchmark-pod"
 # nodeSelector, for fio client pod
 # bench_fiorand_nodelabel="node-role.kubernetes.io/worker=''"
 
-# nodeSelector, for fio server pods, in distributed mode
+# nodeSelector, for fio server pods
 # bench_fiorand_servernodelabel="node-role.kubernetes.io/worker=''"
 
 # directory where output files exist in pods/containers
 bench_fiorand_podoutdir: /benchout
-
-# directory where data set is created, when not in distributed mode
-bench_fiorand_datadir: /dataset
 
 # main container name
 bench_fiorand_container: "benchmark-complete"
@@ -43,9 +40,6 @@ bench_fiorand_maxtime_sec: 36000
 #
 # variables likely to be specific to this benchmark
 #
-
-# mode: is this fio in distributed mode, aka client-server mode
-bench_fiorand_distributed: False
 
 # allow tests to be optional
 bench_fiorand_testread: True
@@ -73,7 +67,7 @@ bench_fiorand_iodepth: 32
 # run time for time based job
 bench_fiorand_run_sec: 60
 
-# number of fio instances, for distributed mode
+# number of fio instances
 bench_fiorand_ninstances: 1
 
 ...
