--- a/roles/bench_fioseq/tasks/gather.yml
+++ b/roles/bench_fioseq/tasks/gather.yml
@@ -1,24 +1,8 @@
 ---
 
-- name: get fio pod name
-  command: 'kubectl get pods -l {{ bench_fioseq_podlabel }} --namespace={{ bench_fioseq_namespace }} --no-headers -o custom-columns=":metadata.name"'
-  register: podlist
-
-- name: create directory for storing fio pod output
-  file: 
-    path: '{{ bench_fioseq_dir }}/{{ podlist.stdout }}'
-    state: directory
-
-- name: fetch output from fio pod
-  command: 'kubectl cp {{ bench_fioseq_namespace }}/{{ podlist.stdout }}:{{ bench_fioseq_podoutdir }} {{ bench_fioseq_dir }}/{{ podlist.stdout }}'
-
-- name: fetch df from fio pod
-  shell: 'kubectl exec {{ podlist.stdout }} -c {{ bench_fioseq_container }} -n {{ bench_fioseq_namespace }} -- df -h > {{ bench_fioseq_dir }}/{{ podlist.stdout }}/df_h.txt'
-
-- name: fetch mount from fio pod
-  shell: 'kubectl exec {{ podlist.stdout }} -c {{ bench_fioseq_container }} -n {{ bench_fioseq_namespace }} -- mount > {{ bench_fioseq_dir }}/{{ podlist.stdout }}/mount.txt'
-
-- name: get fio pod location
-  shell: 'kubectl get pods -l {{ bench_fioseq_podlabel }} -n {{ bench_fioseq_namespace }} -o wide >> {{ bench_fioseq_pdir }}/out.{{ role_name }}.txt'
+- include_role:
+    name: server_fio
+  vars:
+    server_mode: gather
 
 ...
