--- a/roles/storage_ceph/defaults/main.yml
+++ b/roles/storage_ceph/defaults/main.yml
@@ -1,5 +1,11 @@
 ---
 
+# output directory for run
+storage_ceph_pdir: '{{ run_dir }}'
+
+# directory for role's output
+storage_ceph_dir: '{{ storage_ceph_pdir }}/{{ role_name }}'
+
 # namespace
 storage_ceph_nm: "openshift-storage"
 
