cleanup stats_sysstat drop caches

--- a/roles/stats_sysstat/tasks/drop_caches.yml
+++ b/roles/stats_sysstat/tasks/drop_caches.yml
@@ -4,17 +4,12 @@
   command: 'kubectl get pods -l {{ stats_sysstat_podlabel }} -n {{ stats_sysstat_namespace }} --no-headers -o custom-columns=":metadata.name"'
   register: podlist
 
-- name: drop caches start timestamp
-  shell: 'date >> {{ stats_sysstat_dir }}/drop_caches.start.txt'
-  when: stats_sysstat_allowdropcache
-
-- name: drop caches 
-  shell: 'kubectl exec {{ item }} -n {{ stats_sysstat_namespace }} -- sysctl vm.drop_caches=3'
-  with_items: "{{ podlist.stdout_lines }}"
-  when: stats_sysstat_allowdropcache
-
-- name: drop caches finish timestamp
-  shell: 'date >> {{ stats_sysstat_dir }}/drop_caches.finish.txt'
+- name: drop kernel caches 
+  block:
+    - shell: 'date >> {{ stats_sysstat_dir }}/drop_caches.start.txt'
+    - shell: 'kubectl exec {{ item }} -n {{ stats_sysstat_namespace }} -- sysctl vm.drop_caches=3'
+      with_items: "{{ podlist.stdout_lines }}"
+    - shell: 'date >> {{ stats_sysstat_dir }}/drop_caches.finish.txt'
   when: stats_sysstat_allowdropcache
 
 ...
