--- a/perform_benchrun.yml
+++ b/perform_benchrun.yml
@@ -19,6 +19,12 @@
     when: stats_enabled is defined and stats_enabled
 
   - include_role:
+      name: os_rootpods
+    vars: 
+      action: start
+    when: deploy_osrootpods is defined and deploy_osrootpods
+
+  - include_role:
       name: '{{ benchmark_role }}'
     vars: 
       benchmark_mode: prepare
@@ -78,6 +84,12 @@
     vars: 
       calm_mode: stop
     when: calm_enabled is defined and calm_enabled
+
+  - include_role:
+      name: os_rootpods
+    vars: 
+      action: stop
+    when: deploy_osrootpods is defined and deploy_osrootpods
 
   - include_role:
       name: '{{ stats_role }}'
