create and delete namespace on each run

--- a/cleanup.yml
+++ b/cleanup.yml
@@ -3,8 +3,10 @@
 - hosts: localhost
 
   tasks:
+
   - include_role: 
       name: do_setup
     vars:
-      action: create
+      action: delete
+
 ...
