--- a/roles/os_rootpods/tasks/main.yml
+++ b/roles/os_rootpods/tasks/main.yml
@@ -18,20 +18,15 @@
 - name: start pods
   command: 'kubectl create -f {{ os_rootpods_dir }}/osrootpods_daemonset.yaml -n {{ os_rootpods_namespace }}'
 
-- command: 'kubectl get nodes --no-headers -o custom-columns=":metadata.name"'
-  register: nodelist
-  when: os_rootpods_nodelabel is not defined
-
-- command: 'kubectl get nodes -l {{ os_rootpods_nodelabel }} --no-headers -o custom-columns=":metadata.name"'
-  register: nodelist
-  when: os_rootpods_nodelabel is defined
-
+# NOTE:
+#   checking whether all pods in a daemonset are ready, proved
+#   to be a little tricky. Using a sleep for now. 
 - name: wait for all pods to start
+  command: 'sleep 30'
+
+- name: get all pods
   command: 'kubectl get pods -l {{ os_rootpods_podlabel }} -n {{ os_rootpods_namespace }} --no-headers -o custom-columns=":metadata.name"'
   register: podlist
-  until: podlist.stdout_lines|length == nodelist.stdout_lines|length
-  retries: 30
-  delay: 10
 
 - name: wait for pods to be ready
   command: 'kubectl wait --for=condition=Ready pod/{{ item }} -n {{ os_rootpods_namespace }} --timeout=300s'
@@ -41,6 +36,9 @@
   block:
     - shell: 'echo -n "completed: {{ os_rootpods_command }} at: " >> {{ os_rootpods_dir }}/command.log.txt'
     - shell: 'date >> {{ os_rootpods_dir }}/command.log.txt'
+
+- name: get pod locations
+  shell: 'kubectl get pods -l {{ os_rootpods_podlabel }} -n {{ os_rootpods_namespace }} -o wide >> {{ os_rootpods_dir }}/podlocations.{{ role_name }}.txt'
 
 - name: stop pods
   command: 'kubectl delete -f {{ os_rootpods_dir }}/osrootpods_daemonset.yaml -n {{ os_rootpods_namespace }}'
